--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,6 +8,7 @@ div#galaxy {
   height: 400px;
   border-radius: 10px;
   border: 1px dashed rgba(52, 52, 52, 0.673);
+  display:none;
 }
 
 img.starship {
