--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,13 +1,33 @@
-body h1.title {
+body {
   text-align: center;
 }
+
+body h1.title {
+  width: 100%;
+  margin: auto;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  background: linear-gradient(rgb(0, 1, 20), #02367e);
+  color: white;
+  font-size: 50px;
+}
+
+h2{
+  font-size: 30px;
+}
+
 
 div#galaxy {
   position: relative;
   width: 100%;
-  height: 400px;
+  height: 500px;
   border-radius: 10px;
   border: 1px dashed rgba(52, 52, 52, 0.673);
+  display: block;
+}
+
+#formularies{
+  display: block;
 }
 
 img.starship {
@@ -20,4 +40,97 @@ img.starship {
 img.starship.small {
   width: 50px;
   height: 50px;
+}
+
+.row {
+  width: 100%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.col {
+  width: 50%;
+}
+
+.col-2 {
+  width: 100%;
+}
+
+input[type="text"],input[type="submit"] {
+  font-size: 25px;
+  width: 500px;
+  min-width: 100px;
+  padding: 30px;
+  border-radius: 7px;
+}
+
+select{
+  font-size: 25px;
+  width: 560px;
+  min-width: 100px;
+  padding: 32px;
+  border-radius: 7px;
+}
+
+.col-2 input[type="text"]{
+  font-size: 25px;
+  width: 1000px;
+  min-width: 100px;
+  padding: 30px;
+  border-radius: 7px;
+}
+
+.box {
+  margin: 20px;
+  padding: 10px 10px 10px 100px;
+}
+
+.form-inline {
+  display: flex;
+  align-items: center;
+}
+
+input[type="submit"] {
+  font-size: 32px;
+  font-weight: 700;
+  color: white;
+  background-color: rgb(62, 62, 78);
+
+}
+
+@media screen and (max-width: 1000px) {
+  .col {
+      width: 100%;
+      margin: 0;
+  }
+  
+
+  .col-2 input[type="text"]{
+    font-size: 25px;
+    width: 330px;
+    min-width: 100px;
+    border-radius: 7px;
+  }
+
+  input[type="text"],input[type="submit"] {
+    font-size: 25px;
+    width: 330px;
+    min-width: 100px;
+    border-radius: 7px;
+  }
+
+  
+  select{
+    font-size: 25px;
+    width: 400px;
+    min-width: 100px;
+    border-radius: 7px;
+  }
+
+  .box {
+    padding: 1%;
+    display: block;
+  }
 }
