--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -21,3 +21,13 @@ img.starship.small {
   width: 50px;
   height: 50px;
 }
+
+img.battleship.small {
+  width: 60px;
+  height: 60px;
+}
+
+img.bullet {
+  width: 30px;
+  height: 20px;
+}
