--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,41 @@
+
+html {
+  background: #0f0c29;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: white;
+  font-family: "Trebuchet MS"
+}
+
+button {
+  background-color: transparent;
+  border-radius: 20px;
+  border-color: white;
+  width: 30%;
+  font-family: "Trebuchet MS";
+  color: white;
+  font-size: 150%;
+
+}
+
+input {
+  border-radius: 5px;
+  border-color: white;
+  font-family: "Trebuchet MS";
+}
+
+select {
+  border-radius: 5px;
+  border-color: white;
+  font-family: "Trebuchet MS";
+
+
+}
+
+
 body h1.title {
   text-align: center;
+ 
 }
 
 div#galaxy {
@@ -7,8 +43,14 @@ div#galaxy {
   width: 100%;
   height: 400px;
   border-radius: 10px;
-  border: 1px dashed rgba(52, 52, 52, 0.673);
+  border: 3px solid white;
   display:none;
+
+}
+
+div#id_room {
+  display:none;
+
 }
 
 img.starship {
