--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -65,6 +65,39 @@ img.starship.small {
   height: 50px;
 }
 
+/*display:none;*/
+
+div#players {
+  
+  position: relative;
+  width: 100%;
+  height: 400px;
+  display: none;
+
+}
+
+.border{
+  border-radius: 10px;
+  border: 3px solid white;
+}
+
+div#klingon{
+  width: 50%;
+  text-align: center;
+}
+
+div#federation{
+  width: 50%;
+  text-align: center;
+}
+
+.userIcon{
+  width: 50px;
+}
+
+.user{
+  display: inline-flex;
+}
 
 /* from w3schools.com  */
 
