--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   text-align: center;
 }
 
@@ -139,4 +139,107 @@ input[type="submit"] {
     padding: 1%;
     display: block;
   }
+} */
+
+*{
+  margin: 0;
+  padding: 0;
+}
+
+h1{
+  text-align: center;
+  padding-top: 2%;
+
+}
+
+body{
+  background: #e9eaea;
+  font-family: "Roboto", sans-serif;
+}
+
+#formularies{
+  width: 500px;
+  margin: 60px auto;
+}
+
+.join, 
+.create{
+  width: 50%;
+  height: 60px;
+  background: rgb(14, 1, 44);
+  color: white;
+  float: left;
+  text-align: center;
+  line-height: 55px;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+
+.join-form, 
+.create-form{
+  background-color: #fff;
+  box-sizing: border-box;
+  padding: 40px;
+  clear:both;
+  width : 100%;
+  height: 300px;
+}
+
+.input{
+  width: 100%;
+  box-sizing: border-box;
+  padding: 20px;
+  margin-bottom: 15px;
+  border: 2px solid rgba(201, 85, 85, 0.733);
+  font-size: 16px;
+  outline:none;
+
+}
+
+.input.optional{
+  border: 2px solid rgba(192, 192, 46, 0.705);
+}
+
+.input:focus{
+  border: 2px solid rgba(69, 1, 71, 0.541);
+}
+
+.btn{
+  width: 100%;
+  background-color: rgb(14, 1, 44);
+  box-sizing: border-box;
+  height: 60px;
+  color: white;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  cursor: pointer;
+  margin-bottom: 30px;
+}
+
+div#galaxy {
+  position: relative;
+  width: 100%;
+  height: 500px;
+  border-radius: 10px;
+  border: 1px dashed rgba(52, 52, 52, 0.673);
+  display: block;
+}
+
+img.starship {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  visibility: hidden;
+}
+
+img.starship.small {
+  width: 50px;
+  height: 50px;
+}
+
+img.bullet {
+  position: absolute;
+  width: 5px;
+  height: 20px;
 }
