--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -41,7 +41,7 @@ body h1.title {
 
 div#galaxy {
   position: relative;
-  width: 100%;
+  width: 1500px;
   height: 400px;
   border-radius: 10px;
   border: 3px solid white;
@@ -71,7 +71,7 @@ img.starship.small {
 div#players {
   
   position: relative;
-  width: 100%;
+  width: 1500px;
   height: 400px;
   display: none;
 
